Fix dropdown search text overflow issue

--- a/client/styles/base/_variables.scss
+++ b/client/styles/base/_variables.scss
@@ -39,13 +39,15 @@ $sidebar-link-active-bg-color: rgba(255, 255, 255, 0.2);
 // Dropdown Search
 $dropdown-search-bg-color: #333333;
 $dropdown-search-result-bg-color: $light-black;
-$dropdown-search-width-4k: 400px;
+$dropdown-search-width-4k: 500px;
 $dropdown-search-width-lg: 450px;
-$dropdown-search-width-md: 500px;
-$dropdown-search-width: 400px;
-$dropdown-search-title-width-4k: 320px;
+$dropdown-search-width-md: 400px;
+$dropdown-search-width: 350px;
+
+$dropdown-search-title-width-4k: 470px;
 $dropdown-search-title-width-lg: 420px;
-$dropdown-search-title-width-md: 420px;
+$dropdown-search-title-width-md: 370px;
+
 $dropdown-search-title-width: 320px;
 $dropdown-search-input-height: 30px;
 $dropdown-search-max-height: 600px;
